HW3/j--/src/jminusminus/Parser.java
// Copyright 2013 Bill Campbell, Swami Iyer and Bahar Akbal-Delibas

package jminusminus;

import java.util.ArrayList;
import static jminusminus.TokenKind.*;

/**
 * A recursive descent parser that, given a lexical analyzer (a
 * LookaheadScanner), parses a Java compilation unit (program file), taking
 * tokens from the LookaheadScanner, and produces an abstract syntax tree (AST)
 * for it.
 */

public class Parser {

    /** The lexical analyzer with which tokens are scanned. */
    private LookaheadScanner scanner;

    /** Whether a parser error has been found. */
    private boolean isInError;

    /** Wheter we have recovered from a parser error. */
    private boolean isRecovered;

    /**
     * Construct a parser from the given lexical analyzer.
     * 
     * @param scanner
     *            the lexical analyzer with which tokens are scanned.
     */

    public Parser(LookaheadScanner scanner) {
        this.scanner = scanner;
        isInError = false;
        isRecovered = true;
        scanner.next(); // Prime the pump
    }

    /**
     * Has a parser error occurred up to now?
     * 
     * @return true or false.
     */

    public boolean errorHasOccurred() {
        return isInError;
    }

    // ////////////////////////////////////////////////
    // Parsing Support ///////////////////////////////
    // ////////////////////////////////////////////////

    /**
     * Is the current token this one?
     * 
     * @param sought
     *            the token we're looking for.
     * @return true iff they match; false otherwise.
     */

    private boolean see(TokenKind sought) {
        return (sought == scanner.token().kind());
    }

    /**
     * Look at the current (unscanned) token to see if it's one we're looking
     * for. If so, scan it and return true; otherwise return false (without
     * scanning a thing).
     * 
     * @param sought
     *            the token we're looking for.
     * @return true iff they match; false otherwise.
     */

    private boolean have(TokenKind sought) {
        if (see(sought)) {
            scanner.next();
            return true;
        } else {
            return false;
        }
    }

    /**
     * Attempt to match a token we're looking for with the current input token.
     * If we succeed, scan the token and go into a "isRecovered" state. If we
     * fail, then what we do next depends on whether or not we're currently in a
     * "isRecovered" state: if so, we report the error and go into an
     * "Unrecovered" state; if not, we repeatedly scan tokens until we find the
     * one we're looking for (or EOF) and then return to a "isRecovered" state.
     * This gives us a kind of poor man's syntactic error recovery. The strategy
     * is due to David Turner and Ron Morrison.
     * 
     * @param sought
     *            the token we're looking for.
     */

    private void mustBe(TokenKind sought) {
        if (scanner.token().kind() == sought) {
            scanner.next();
            isRecovered = true;
        } else if (isRecovered) {
            isRecovered = false;
            reportParserError("%s found where %s sought", scanner.token()
                    .image(), sought.image());
        } else {
            // Do not report the (possibly spurious) error,
            // but rather attempt to recover by forcing a match.
            while (!see(sought) && !see(EOF)) {
                scanner.next();
            }
            if (see(sought)) {
                scanner.next();
                isRecovered = true;
            }
        }
    }

    /**
     * Pull out the ambiguous part of a name and return it.
     * 
     * @param name
     *            with an ambiguos part (possibly).
     * @return ambiguous part or null.
     */

    private AmbiguousName ambiguousPart(TypeName name) {
        String qualifiedName = name.toString();
        int lastDotIndex = qualifiedName.lastIndexOf('.');
        return lastDotIndex == -1 ? null // It was a simple
                // name
                : new AmbiguousName(name.line(), qualifiedName.substring(0,
                        lastDotIndex));
    }

    /**
     * Report a syntax error.
     * 
     * @param message
     *            message identifying the error.
     * @param args
     *            related values.
     */

    private void reportParserError(String message, Object... args) {
        isInError = true;
        isRecovered = false;
        System.err
                .printf("%s:%d: ", scanner.fileName(), scanner.token().line());
        System.err.printf(message, args);
        System.err.println();
    }

    // ////////////////////////////////////////////////
    // Lookahead /////////////////////////////////////
    // ////////////////////////////////////////////////

    /**
     * Are we looking at an IDENTIFIER followed by a LPAREN? Look ahead to find
     * out.
     * 
     * @return true iff we're looking at IDENTIFIER LPAREN; false otherwise.
     */

    private boolean seeIdentLParen() {
        scanner.recordPosition();
        boolean result = have(IDENTIFIER) && see(LPAREN);
        scanner.returnToPosition();
        return result;
    }

    /**
     * Are we looking at a cast? ie.
     * 
     * <pre>
     *   LPAREN type RPAREN ...
     * </pre>
     * 
     * Look ahead to find out.
     * 
     * @return true iff we're looking at a cast; false otherwise.
     */

    private boolean seeCast() {
        scanner.recordPosition();
        if (!have(LPAREN)) {
            scanner.returnToPosition();
            return false;
        }
        if (seeBasicType()) {
            scanner.returnToPosition();
            return true;
        }
        if (!see(IDENTIFIER)) {
            scanner.returnToPosition();
            return false;
        } else {
            scanner.next(); // Scan the IDENTIFIER
            // A qualified identifier is ok
            while (have(DOT)) {
                if (!have(IDENTIFIER)) {
                    scanner.returnToPosition();
                    return false;
                }
            }
        }
        while (have(LBRACK)) {
            if (!have(RBRACK)) {
                scanner.returnToPosition();
                return false;
            }
        }
        if (!have(RPAREN)) {
            scanner.returnToPosition();
            return false;
        }
        scanner.returnToPosition();
        return true;
    }

    /**
     * Are we looking at a local variable declaration? ie.
     * 
     * <pre>
     *   type IDENTIFIER {LBRACK RBRACK} ...
     * </pre>
     * 
     * Look ahead to determine.
     * 
     * @return true iff we are looking at local variable declaration; false
     *         otherwise.
     */

    private boolean seeLocalVariableDeclaration() {
        scanner.recordPosition();
        if (have(IDENTIFIER)) {
            // A qualified identifier is ok
            while (have(DOT)) {
                if (!have(IDENTIFIER)) {
                    scanner.returnToPosition();
                    return false;
                }
            }
        } else if (seeBasicType()) {
            scanner.next();
        } else {
            scanner.returnToPosition();
            return false;
        }
        while (have(LBRACK)) {
            if (!have(RBRACK)) {
                scanner.returnToPosition();
                return false;
            }
        }
        if (!have(IDENTIFIER)) {
            scanner.returnToPosition();
            return false;
        }
        while (have(LBRACK)) {
            if (!have(RBRACK)) {
                scanner.returnToPosition();
                return false;
            }
        }
        scanner.returnToPosition();
        return true;
    }

    /**
     * Are we looking at a basic type? ie.
     * 
     * <pre>
     * BOOLEAN | CHAR | INT
     * </pre>
     * 
     * @return true iff we're looking at a basic type; false otherwise.
     */

    private boolean seeBasicType() {
        if (see(BOOLEAN) || see(CHAR) || see(INT)|| see(DOUBLE)|| see (LONG)) {
            return true;
        } else {
            return false;
        }
    }

    /**
     * Are we looking at a reference type? ie.
     * 
     * <pre>
     *   referenceType ::= basicType LBRACK RBRACK {LBRACK RBRACK}
     *                   | qualifiedIdentifier {LBRACK RBRACK}
     * </pre>
     * 
     * @return true iff we're looking at a reference type; false otherwise.
     */

    private boolean seeReferenceType() {
        if (see(IDENTIFIER)) {
            return true;
        } else {
            scanner.recordPosition();
            if (have(BOOLEAN) || have(CHAR) || have(INT) || have(LONG) ||have(DOUBLE)) {
                if (have(LBRACK) && see(RBRACK)) {
                    scanner.returnToPosition();
                    return true;
                }
            }
            scanner.returnToPosition();
        }
        return false;
    }

    /**
     * Are we looking at []?
     * 
     * @return true iff we're looking at a [] pair; false otherwise.
     */

    private boolean seeDims() {
        scanner.recordPosition();
        boolean result = have(LBRACK) && see(RBRACK);
        scanner.returnToPosition();
        return result;
    }

    // ////////////////////////////////////////////////
    // Parser Proper /////////////////////////////////
    // ////////////////////////////////////////////////

    /**
     * Parse a compilation unit (a program file) and construct an AST for it.
     * After constructing the Parser, this is its entry point.
     * 
     * <pre>
     *   compilationUnit ::= [PACKAGE qualifiedIdentifier SEMI]
     *                       {IMPORT  qualifiedIdentifier SEMI}
     *                       {typeDeclaration}
     *                       EOF
     * </pre>
     * 
     * @return an AST for a compilationUnit.
     */

    public JCompilationUnit compilationUnit() {
        int line = scanner.token().line();
        TypeName packageName = null; // Default
        if (have(PACKAGE)) {
            packageName = qualifiedIdentifier();
            mustBe(SEMI);
        }
        ArrayList<TypeName> imports = new ArrayList<TypeName>();
        while (have(IMPORT)) {
            imports.add(qualifiedIdentifier());
            mustBe(SEMI);
        }
        ArrayList<JAST> typeDeclarations = new ArrayList<JAST>();
        while (!see(EOF)) {
            JAST typeDeclaration = typeDeclaration();
            if (typeDeclaration != null) {
                typeDeclarations.add(typeDeclaration);
            }
        }
        mustBe(EOF);
        return new JCompilationUnit(scanner.fileName(), line, packageName,
                imports, typeDeclarations);
    }

    /**
     * Parse a qualified identifier.
     * 
     * <pre>
     *   qualifiedIdentifier ::= IDENTIFIER {DOT IDENTIFIER}
     * </pre>
     * 
     * @return an instance of TypeName.
     */

    private TypeName qualifiedIdentifier() {
        int line = scanner.token().line();
        mustBe(IDENTIFIER);
        String qualifiedIdentifier = scanner.previousToken().image();
        while (have(DOT)) {
            mustBe(IDENTIFIER);
            qualifiedIdentifier += "." + scanner.previousToken().image();
        }
        return new TypeName(line, qualifiedIdentifier);
    }

    /**
     * Parse a type declaration.
     * 
     * <pre>
     *   typeDeclaration ::= modifiers classDeclaration
     * </pre>
     * 
     * @return an AST for a typeDeclaration.
     */

  private JAST typeDeclaration() {
        int line = scanner.token().line();
        ArrayList<String> mods = modifiers();
        if (see(CLASS)) {
            return classDeclaration(mods);
        } else if (see(INTERFACE)) {
            return interfaceDeclaration(mods);
        } else {
            mustBe(SEMI);
            return new JEmptyStatement(line);
        }
    }

    /**
     * Parse modifiers.
     * 
     * <pre>
     *   modifiers ::= {PUBLIC | PROTECTED | PRIVATE | STATIC | 
     *                  ABSTRACT}
     * </pre>
     * 
     * Check for duplicates, and conflicts among access modifiers (public,
     * protected, and private). Otherwise, no checks.
     * 
     * @return a list of modifiers.
     */

    private ArrayList<String> modifiers() {
        ArrayList<String> mods = new ArrayList<String>();
        boolean scannedPUBLIC = false;
        boolean scannedPROTECTED = false;
        boolean scannedPRIVATE = false;
        boolean scannedSTATIC = false;
        boolean scannedABSTRACT = false;
        boolean more = true;
        while (more)
            if (have(PUBLIC)) {
                mods.add("public");
                if (scannedPUBLIC) {
                    reportParserError("Repeated modifier: public");
                }
                if (scannedPROTECTED || scannedPRIVATE) {
                    reportParserError("Access conflict in modifiers");
                }
                scannedPUBLIC = true;
            } else if (have(PROTECTED)) {
                mods.add("protected");
                if (scannedPROTECTED) {
                    reportParserError("Repeated modifier: protected");
                }
                if (scannedPUBLIC || scannedPRIVATE) {
                    reportParserError("Access conflict in modifiers");
                }
                scannedPROTECTED = true;
            } else if (have(PRIVATE)) {
                mods.add("private");
                if (scannedPRIVATE) {
                    reportParserError("Repeated modifier: private");
                }
                if (scannedPUBLIC || scannedPROTECTED) {
                    reportParserError("Access conflict in modifiers");
                }
                scannedPRIVATE = true;
            } else if (have(STATIC)) {
                mods.add("static");
                if (scannedSTATIC) {
                    reportParserError("Repeated modifier: static");
                }
                scannedSTATIC = true;
            } else if (have(ABSTRACT)) {
                mods.add("abstract");
                if (scannedABSTRACT) {
                    reportParserError("Repeated modifier: abstract");
                }
                scannedABSTRACT = true;
            } else {
                more = false;
            }
        return mods;
    }

    /**
     * Parse a class declaration.
     * 
     * <pre>
     *   classDeclaration ::= CLASS IDENTIFIER 
     *                        [EXTENDS qualifiedIdentifier] 
     *                        classBody
     * </pre>
     * 
     * A class which doesn't explicitly extend another (super) class implicitly
     * extends the superclass java.lang.Object.
     * 
     * @param mods
     *            the class modifiers.
     * @return an AST for a classDeclaration.
     */

    private JClassDeclaration classDeclaration(ArrayList<String> mods) {
        int line = scanner.token().line();
        mustBe(CLASS);
        mustBe(IDENTIFIER);
        String name = scanner.previousToken().image();
        Type superClass;
        if (have(EXTENDS)) {
            superClass = qualifiedIdentifier();
        } else {
            superClass = Type.OBJECT;
        }

        ArrayList<TypeName> implement = new ArrayList<TypeName>();
        if (have(IMPLEMENTS)) {
        	do {
        		implement.add(qualifiedIdentifier());
            } while (have(COMMA));
        }

        return new JClassDeclaration(line, mods, name, superClass, implement, classBody());
    }
    /**
     * Parse a class body.
     * 
     * <pre>
     *   classBody ::= LCURLY
     *                   {modifiers memberDecl}
     *                 RCURLY
     * </pre>
     * 
     * @return list of members in the class body.
     */

     private ArrayList<JMember> classBody() {
        ArrayList<JMember> members = new ArrayList<JMember>();
        mustBe(LCURLY);
        while (!see(RCURLY) && !see(EOF)) {
        	if (have(SEMI)) {
        		int line = scanner.token().line();
        		members.add(new JEmptyMember(line));
        	} else {
            members.add(memberDecl(modifiers()));
            }
        }
        mustBe(RCURLY);
        return members;
    }


/////////////// Interface /////////////
    private JInterfaceDeclaration interfaceDeclaration(ArrayList<String> mods) 
    {
    	int line = scanner.token().line();
    	mustBe(INTERFACE);
    	mustBe(IDENTIFIER);
    	String name = scanner.previousToken().image();
    	ArrayList<TypeName> extend = new ArrayList<TypeName>();
    	if (have(EXTENDS)) {
		    do {
		        extend.add(qualifiedIdentifier());
			   } while (have(COMMA));
		}
		return new JInterfaceDeclaration(line, mods, name, extend,
				              interfaceBody());
     }
  
    private ArrayList<JMember> interfaceBody() {
    	ArrayList<JMember> members = new ArrayList<JMember>();
		mustBe(LCURLY);
		while (!see(RCURLY) && !see(EOF)) {
			if (have(SEMI)) {
				int line = scanner.token().line();
				members.add(new JEmptyMember(line));
			} else
				members.add(interfaceMemberDecl(modifiers()));
		}
		mustBe(RCURLY);
		return members;
    }
    
    private JMember interfaceMemberDecl(ArrayList<String> mods) {
        int line = scanner.token().line();
        JMember interfaceMemberDecl = null;
        if (seeIdentLParen()) {
            // constructor
            mustBe(IDENTIFIER);
            String name = scanner.previousToken().image();
            ArrayList<JFormalParameter> params = formalParameters(); 
            JBlock body = block();
            interfaceMemberDecl = new JConstructorDeclaration(line, mods, name, params,
                    body);
        } 
        else if (see(CLASS)){ //for inner class
        	interfaceMemberDecl = classDeclaration(mods);
        }
        else if (see(INTERFACE)){ //for inner interface
        	interfaceMemberDecl = interfaceDeclaration(mods);
        }
        else {
        	
            Type type = null;
            if (have(VOID)) {
                // void method
                type = Type.VOID;
                mustBe(IDENTIFIER);
                String name = scanner.previousToken().image();
                ArrayList<JFormalParameter> params = formalParameters();
                ArrayList<Type> exceptions = null; 
                if (have(THROWS)) {
                	exceptions = new ArrayList<Type>();              	
                	boolean more = true;              	
                	while(more) {
                		exceptions.add(qualifiedIdentifier());
                		if (!have(COMMA))
                			more = false;
                	} 
				}
                JBlock body = have(SEMI) ? null : block();
                interfaceMemberDecl = new JMethodDeclaration(line, mods, name, type,
                        params, exceptions, body);
            } else {
                type = type();
                if (seeIdentLParen()) {
                    // Non-void method
                    mustBe(IDENTIFIER);
                    String name = scanner.previousToken().image();
                    ArrayList<JFormalParameter> params = formalParameters();
                    ArrayList<Type> exceptions = null; 
                	if (have(THROWS)) {
                		exceptions = new ArrayList<Type>();              	
                		boolean more = true;              	
                		while(more) {
                			exceptions.add(qualifiedIdentifier());
                			if (!have(COMMA))
                			more = false;
                		} 
					}
                    JBlock body = have(SEMI) ? null : block();
                    interfaceMemberDecl = new JMethodDeclaration(line, mods, name, type,
                            params, exceptions, body);
                } else {
                    // Field
                	interfaceMemberDecl = new JFieldDeclaration(line, mods,
                            variableDeclarators(type));
                    mustBe(SEMI);
                }
            }
        }
        return interfaceMemberDecl;
    }


    /**
     * Parse a member declaration.
     * 
     * <pre>
     *   memberDecl ::= IDENTIFIER            // constructor
     *                    formalParameters
     *                    block
     *                | (VOID | type) IDENTIFIER  // method
     *                    formalParameters
     *                    (block | SEMI)
     *                | type variableDeclarators SEMI
     * </pre>
     * 
     * @param mods
     *            the class member modifiers.
     * @return an AST for a memberDecl.
     */

    private JMember memberDecl(ArrayList<String> mods) {
        int line = scanner.token().line();
        JMember memberDecl = null;
        if (seeIdentLParen()) {
            // A constructor
            mustBe(IDENTIFIER);
            String name = scanner.previousToken().image();
            ArrayList<JFormalParameter> params = formalParameters();
            JBlock body = block();
            memberDecl = new JConstructorDeclaration(line, mods, name, params,body);
            } 
            else if (have(LCURLY)) { 
			JBlock body = have(SEMI) ? null : block();
			memberDecl = new JInstanceBlock(line, body);
		    }
            else if (have(LCURLY) && mods.size() == 1 && mods.contains(STATIC.image())) {  
			    JBlock body = have(SEMI) ? null : block();
			    memberDecl = new JStaticBlock(line, mods, body);
		    } 
            else if (see(CLASS)){ //inner class
        	    memberDecl = classDeclaration(mods);
            }
            else if (see(INTERFACE)){ //inner class
        	    memberDecl = interfaceDeclaration(mods);
            }              
            else {
                Type type = null;
                if (have(VOID)) {
                // void method
                    type = Type.VOID;
                    mustBe(IDENTIFIER);
                    String name = scanner.previousToken().image();
                    ArrayList<JFormalParameter> params = formalParameters();
                    ArrayList<Type> exceptions = null; 
                    if (have(THROWS)) {
                	    exceptions = new ArrayList<Type>();              	
                	    boolean more = true;              	
                	    while(more) {
                		    exceptions.add(qualifiedIdentifier());
                		    if (!have(COMMA))
                			    more = false;
                	    } 
				    }
                    JBlock body = have(SEMI) ? null : block();
                    memberDecl = new JMethodDeclaration(line, mods, name, type, params, exceptions, body);
                } 
                else {
                    type = type();
                    if (seeIdentLParen()) {
                        // Non void method
                        mustBe(IDENTIFIER);
                        String name = scanner.previousToken().image();
                        ArrayList<JFormalParameter> params = formalParameters();
                        ArrayList<Type> exceptions = null; 
            		    if (have(THROWS)) {
            			    exceptions = new ArrayList<Type>();
            			    boolean more = true;
            			    while(more) {
            				    exceptions.add(qualifiedIdentifier());
            				    if (!have(COMMA))
            					    more = false;
            			    } 
					    }                    
                        JBlock body = have(SEMI) ? null : block();
                        memberDecl = new JMethodDeclaration(line, mods, name, type, params, body);
                        } 
                        else {
                        // Field
                            memberDecl = new JFieldDeclaration(line, mods, variableDeclarators(type));
                            mustBe(SEMI);
                        }
                    }
               }
             return memberDecl;
        }
    /**
     * Parse a block.
     * 
     * <pre>
     *   block ::= LCURLY {blockStatement} RCURLY
     * </pre>
     * 
     * @return an AST for a block.
     */

    private JBlock block() {
        int line = scanner.token().line();
        ArrayList<JStatement> statements = new ArrayList<JStatement>();
        mustBe(LCURLY);
        while (!see(RCURLY) && !see(EOF)) {
            statements.add(blockStatement());
        }
        mustBe(RCURLY);
        return new JBlock(line, statements);
    }

    /**
     * Parse a block statement.
     * 
     * <pre>
     *   blockStatement ::= localVariableDeclarationStatement
     *                    | statement
     * </pre>
     * 
     * @return an AST for a blockStatement.
     */

    private JStatement blockStatement() {
        if (seeLocalVariableDeclaration()) {
            return localVariableDeclarationStatement();
        } else {
            return statement();
        }
    }

    /**
     * Parse a statement.
     * 
     * <pre>
     *   statement ::= block
     *               | IF parExpression statement [ELSE statement]
     *               | WHILE parExpression statement 
     *               | RETURN [expression] SEMI
     *               | SEMI 
     *               | statementExpression SEMI
     * </pre>
     * 
     * @return an AST for a statement.
     */

    private JStatement statement() {
        int line = scanner.token().line();
        if (see(LCURLY)) {
            return block();
        } else if (have(IF)) {
            JExpression test = parExpression();
            JStatement consequent = statement();
            JStatement alternate = have(ELSE) ? statement() : null;
            return new JIfStatement(line, test, consequent, alternate);

        } else if (have(WHILE)) {
            JExpression test = parExpression();
            JStatement statement = statement();
            return new JWhileStatement(line, test, statement);
        
        } else if (have(FOR)) {
            mustBe(LPAREN);
            ArrayList<JStatement> forInit = new ArrayList<JStatement>();
            ArrayList<JStatement> forUpdate = new ArrayList<JStatement>();
            JExpression expression = null;
            JStatement statements;
            if (!see(SEMI)) {
            	forInit = forInit(line);
            }
            mustBe(SEMI);
            if (!see(SEMI)) {
            	expression = expression();
            }
            mustBe(SEMI);
            if (!see(RPAREN)) {
            	forUpdate = forUpdate();
            }
            mustBe(RPAREN);
            statements = statement();
            return new JForStatement(line, forInit, expression, forUpdate, statements);
            
        } else if (have(DO)) {
        	JStatement statements = statement();
        	mustBe(WHILE);
        	JExpression test = parExpression(); 
        	mustBe(SEMI);
            return new JDoWhileStatement(line, statements, test);

        } else if (have(TRY)) {
            JBlock attempt = block();
            ArrayList<JCatch> catches = new ArrayList<>();
            JBlock finish = null;
            
            while(have(CATCH)) {
                int catchLine = scanner.token().line();
                mustBe(LPAREN);
                
                TypeName type = qualifiedIdentifier();
                mustBe(IDENTIFIER);
                String name = scanner.previousToken().image();
                
                JFormalParameter exception = new JFormalParameter(catchLine, name, type);
                mustBe(RPAREN);
                JBlock caught = block();
                catches.add(new JCatch(catchLine, exception, caught));
            }
            
            if (catches.size() == 0) {
                mustBe(FINALLY);
            } else if (have(FINALLY)) {
                finish = block();
            }
            
			return new JTryStatement(line, attempt, catches, finish);

        } else if (have(THROW)) {
        	return new JThrowStatement(line, expression());

        } else if (have(RETURN)) {

            if (have(SEMI)) {
                return new JReturnStatement(line, null);
            } else {
                JExpression expr = expression();
                mustBe(SEMI);
                return new JReturnStatement(line, expr);
            }
        } else if (have(SEMI)) {
            return new JEmptyStatement(line);
        } else if (have(SWITCH)) {
             JExpression parExpression = parExpression();
             ArrayList<JSwitchBlockStatement> switchBlockStatementGroup = new ArrayList<JSwitchBlockStatement>();
             mustBe(LCURLY);
                while(!see(RCURLY) && !see(EOF)) {
                    if (have(BREAK)) {
                        mustBe(SEMI);
                        switchBlockStatementGroup.add(switchBlockStatementGroup());
                    } else {
                        switchBlockStatementGroup.add(switchBlockStatementGroup());
                    }
                }
             mustBe(RCURLY);
             return new JSwitchStatement(line, parExpression, switchBlockStatementGroup);
        } else if (have(BREAK)) {
        	if (have(SEMI)) {
        		return new JBreakStatement(line, null);
        	} else {
                mustBe(IDENTIFIER);
                String identifier = scanner.previousToken().image();
                return new JBreakStatement(line, identifier);
            }
        } else { // Must be a statementExpression
            JStatement statement = statementExpression();
            mustBe(SEMI);
            return statement;
        }
    }

    /**
     * Parse formal parameters.
     * 
     * <pre>
     *   formalParameters ::= LPAREN 
     *                          [formalParameter 
     *                            {COMMA  formalParameter}]
     *                        RPAREN
     * </pre>
     * 
     * @return a list of formal parameters.
     */

    private ArrayList<JFormalParameter> formalParameters() {
        ArrayList<JFormalParameter> parameters = new ArrayList<JFormalParameter>();
        mustBe(LPAREN);
        if (have(RPAREN))
            return parameters; // ()
        do {
            parameters.add(formalParameter());
        } while (have(COMMA));
        mustBe(RPAREN);
        return parameters;
    }

    /**
     * Parse a formal parameter.
     * 
     * <pre>
     *   formalParameter ::= type IDENTIFIER
     * </pre>
     * 
     * @return an AST for a formalParameter.
     */

    private JFormalParameter formalParameter() {
        int line = scanner.token().line();
        Type type = type();
        mustBe(IDENTIFIER);
        String name = scanner.previousToken().image();
        return new JFormalParameter(line, name, type);
    }

    /**
     * Parse a parenthesized expression.
     * 
     * <pre>
     *   parExpression ::= LPAREN expression RPAREN
     * </pre>
     * 
     * @return an AST for a parExpression.
     */

    private JExpression parExpression() {
        mustBe(LPAREN);
        JExpression expr = expression();
        mustBe(RPAREN);
        return expr;
    }

//////  SwitchBlockStatement    //////
    private JSwitchBlockStatement switchBlockStatementGroup() {
    	int line = scanner.token().line();
    	ArrayList<JExpression> switchLabels = new ArrayList<JExpression>();
    	switchLabels.add(switchLabel());
        JStatement block= null;
        while(see(CASE) || see(DEFAULT)) {
    		switchLabels.add(switchLabel());
    	}
    
        while (!see(CASE) && !see(DEFAULT) && !see(RCURLY)){
            block = blockStatement();
        }    
    	
    	return new JSwitchBlockStatement(line, switchLabels, block);
    }
    
    private JExpression switchLabel() {
    	JExpression expression = null;
    	if (have(CASE)) {
    		expression = expression();
    		mustBe(COLON);
    		return expression;
    	} else {
    		mustBe(DEFAULT);
    		mustBe(COLON);
    		return expression;
    	}
    }

//////  ForInit //////
    private ArrayList<JStatement> forInit(int line) {
    	ArrayList<JStatement> forInit = new ArrayList<JStatement>();
    	if (seeBasicType() || seeReferenceType()) {
            forInit.add(new JForInitDeclaration(line, variableDeclarators(type())));
        } else {
        	forInit.add(statementExpression());
        	while(have(COMMA)) {
        		forInit.add(statementExpression());
        	}
        }
    	return forInit;
    }

///// ForUpdate //////
    private ArrayList<JStatement> forUpdate() {
    	ArrayList<JStatement> forUpdate = new ArrayList<JStatement>();
        forUpdate.add(statementExpression());
        while(have(COMMA)) {
        	forUpdate.add(statementExpression());
        }
        return forUpdate;
    }

    /**
     * Parse a local variable declaration statement.
     * 
     * <pre>
     *   localVariableDeclarationStatement ::= type 
     *                                           variableDeclarators 
     *                                             SEMI
     * </pre>
     * 
     * @return an AST for a variableDeclaration.
     */

    private JVariableDeclaration localVariableDeclarationStatement() {
        int line = scanner.token().line();
        ArrayList<String> mods = new ArrayList<String>();
        ArrayList<JVariableDeclarator> vdecls = variableDeclarators(type());
        mustBe(SEMI);
        return new JVariableDeclaration(line, mods, vdecls);
    }

    /**
     * Parse variable declarators.
     * 
     * <pre>
     *   variableDeclarators ::= variableDeclarator 
     *                             {COMMA variableDeclarator}
     * </pre>
     * 
     * @param type
     *            type of the variables.
     * @return a list of variable declarators.
     */

    private ArrayList<JVariableDeclarator> variableDeclarators(Type type) {
        ArrayList<JVariableDeclarator> variableDeclarators = new ArrayList<JVariableDeclarator>();
        do {
            variableDeclarators.add(variableDeclarator(type));
        } while (have(COMMA));
        return variableDeclarators;
    }

    /**
     * Parse a variable declarator.
     * 
     * <pre>
     *   variableDeclarator ::= IDENTIFIER
     *                          [ASSIGN variableInitializer]
     * </pre>
     * 
     * @param type
     *            type of the variable.
     * @return an AST for a variableDeclarator.
     */

    private JVariableDeclarator variableDeclarator(Type type) {
        int line = scanner.token().line();
        mustBe(IDENTIFIER);
        String name = scanner.previousToken().image();
        JExpression initial = have(ASSIGN) ? variableInitializer(type) : null;
        return new JVariableDeclarator(line, name, type, initial);
    }
